--- a/nuget.config
+++ b/nuget.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="local packages" value="c:\github\odata.net\test\CommonAssemblies" />
+    <add key="local packages" value="test\CommonAssemblies" />
   </packageSources>
 </configuration>
