--- a/azure-pipelines-nightly.yml
+++ b/azure-pipelines-nightly.yml
@@ -60,21 +60,10 @@ steps:
       $publish.GacInstall("$(gacUtil)")
 
 - task: DotNetCoreCLI@2
-  displayName: 'Build Product with Release'  
+  displayName: 'Build Product'  
   inputs:
     command: 'build'
-    arguments: '--configuration Release'
-    projects: |
-     $(Build.SourcesDirectory)\src\Microsoft.Spatial\Microsoft.Spatial.csproj
-     $(Build.SourcesDirectory)\src\Microsoft.OData.Edm\Microsoft.OData.Edm.csproj
-     $(Build.SourcesDirectory)\src\Microsoft.OData.Core\Microsoft.OData.Core.csproj
-     $(Build.SourcesDirectory)\src\Microsoft.OData.Client\Microsoft.OData.Client.csproj
-
-- task: DotNetCoreCLI@2
-  displayName: 'Build Product with Debug'  
-  inputs:
-    command: 'build'
-    arguments: '--configuration Debug'
+    arguments: '--configuration $(BuildConfiguration)'
     projects: |
      $(Build.SourcesDirectory)\src\Microsoft.Spatial\Microsoft.Spatial.csproj
      $(Build.SourcesDirectory)\src\Microsoft.OData.Edm\Microsoft.OData.Edm.csproj
@@ -107,53 +96,26 @@ steps:
      $(Build.SourcesDirectory)\test\FunctionalTests\Microsoft.OData.TestCommon\Microsoft.OData.TestCommon.csproj
      
 - task: DotNetCoreCLI@2
-  displayName: 'Build Unit Test - EDM with Release'  
+  displayName: 'Build Unit Test - EDM'  
   inputs:
     command: 'build'
-    arguments: '--configuration Release --no-incremental'
+    arguments: '--configuration $(BuildConfiguration) --no-incremental'
     projects: |
      $(Build.SourcesDirectory)\test\FunctionalTests\Microsoft.OData.Edm.Tests\Microsoft.OData.Edm.Tests.csproj
      
 - task: DotNetCoreCLI@2
-  displayName: 'Build Unit Test - EDM with Debug'  
+  displayName: 'Build Unit Test - Spatial'  
   inputs:
     command: 'build'
-    arguments: '--configuration Debug --no-incremental'
-    projects: |
-     $(Build.SourcesDirectory)\test\FunctionalTests\Microsoft.OData.Edm.Tests\Microsoft.OData.Edm.Tests.csproj
-      
-     
-- task: DotNetCoreCLI@2
-  displayName: 'Build Unit Test - Spatial with Release'  
-  inputs:
-    command: 'build'
-    arguments: '--configuration Release --no-incremental'
+    arguments: '--configuration $(BuildConfiguration) --no-incremental'
     projects: |
      $(Build.SourcesDirectory)\test\FunctionalTests\Microsoft.Spatial.Tests\Microsoft.Spatial.Tests.csproj
       
-     
 - task: DotNetCoreCLI@2
-  displayName: 'Build Unit Test - Spatial with Debug'  
+  displayName: 'Build Unit Test - Core'
   inputs:
     command: 'build'
-    arguments: '--configuration Debug --no-incremental'
-    projects: |
-     $(Build.SourcesDirectory)\test\FunctionalTests\Microsoft.Spatial.Tests\Microsoft.Spatial.Tests.csproj
-       
-     
-- task: DotNetCoreCLI@2
-  displayName: 'Build Unit Test - Core with Release'
-  inputs:
-    command: 'build'
-    arguments: '--configuration Release --no-incremental'
-    projects: |
-     $(Build.SourcesDirectory)\test\FunctionalTests\Microsoft.OData.Core.Tests\Microsoft.OData.Core.Tests.csproj
-     
-- task: DotNetCoreCLI@2
-  displayName: 'Build Unit Test - Core With Debug'
-  inputs:
-    command: 'build'
-    arguments: '--configuration Debug --no-incremental'
+    arguments: '--configuration $(BuildConfiguration) --no-incremental'
     projects: |
      $(Build.SourcesDirectory)\test\FunctionalTests\Microsoft.OData.Core.Tests\Microsoft.OData.Core.Tests.csproj
      
@@ -161,19 +123,9 @@ steps:
   displayName: 'Build Unit Test - Client'  
   inputs:
     command: 'build'
-    arguments: '--configuration Release --no-incremental'
+    arguments: '--configuration $(BuildConfiguration) --no-incremental'
     projects: |
-     $(Build.SourcesDirectory)\test\FunctionalTests\Microsoft.OData.Client.Tests\Microsoft.OData.Client.Tests.csproj          
-
-- task: DotNetCoreCLI@2
-  displayName: 'Build Unit Test - Client'
-  inputs:
-    command: 'build'
-    arguments: '--configuration Debug --no-incremental'
-    projects: |
-     $(Build.SourcesDirectory)\test\FunctionalTests\Microsoft.OData.Client.Tests\Microsoft.OData.Client.Tests.csproj          
-
-     
+     $(Build.SourcesDirectory)\test\FunctionalTests\Microsoft.OData.Client.Tests\Microsoft.OData.Client.Tests.csproj       
 - task: DotNetCoreCLI@2
   displayName: 'Build Unit Test - PublicApi'
   inputs:
@@ -185,10 +137,10 @@ steps:
     
 
 - task: DotNetCoreCLI@2
-  displayName: 'Build E2E Test with Release'  
+  displayName: 'Build E2E Test'  
   inputs:
     command: 'build'
-    arguments: '--configuration Release --no-incremental'
+    arguments: '--configuration $(BuildConfiguration) --no-incremental'
     projects: |
       $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataEdmLib\EdmLibTests.csproj
       $(Build.SourcesDirectory)\test\FunctionalTests\Service\Microsoft.OData.Service.csproj
@@ -209,18 +161,10 @@ steps:
       $(Build.SourcesDirectory)\test\EndToEndTests\Tests\Client\Build.Desktop\Microsoft.Test.OData.Tests.Client.csproj
 
 - task: DotNetCoreCLI@2
-  displayName: 'Build E2E Test with Debug'  
+  displayName: 'Build Regression Test'  
   inputs:
     command: 'build'
-    arguments: '--configuration Debug --no-incremental'
-    projects: |
-      $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataEdmLib\EdmLibTests.csproj
-
-- task: DotNetCoreCLI@2
-  displayName: 'Build Regression Test with Release'  
-  inputs:
-    command: 'build'
-    arguments: '--configuration Release --no-incremental'
+    arguments: '--configuration $(BuildConfiguration) --no-incremental'
     projects: |     
      $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\MetadataObjectModelTests\Microsoft.Data.MetadataObjectModel.UnitTests.csproj
      $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\NamedStreamTests\Microsoft.Data.NamedStream.UnitTests.csproj
@@ -242,31 +186,7 @@ steps:
      $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\ddbasics\Microsoft.Test.Data.Services.DDBasics.csproj
      $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\DesignT4UnitTests\Microsoft.OData.Service.Design.T4.UnitTests.csproj
      $(Build.SourcesDirectory)\src\CodeGen\Microsoft.Data.Web.Design.T4.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataEdmLib\EdmLibTests.csproj
-               
-  enabled: true
-
-- task: DotNetCoreCLI@2
-  displayName: 'Build Regression Test with Debug'  
-  inputs:
-    command: 'build'
-    arguments: '--configuration Debug --no-incremental'
-    projects: |     
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\MetadataObjectModelTests\Microsoft.Data.MetadataObjectModel.UnitTests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\NamedStreamTests\Microsoft.Data.NamedStream.UnitTests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\ServerUnitTests1\Microsoft.Data.ServerUnitTests1.UnitTests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\ServerUnitTests2\Microsoft.Data.ServerUnitTests2.UnitTests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\RegressionUnitTests\Microsoft.Data.Web.RegressionUnitTests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\ServerUnitTests\Microsoft.Data.Web.UnitTests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\ClientUnitTests\Microsoft.Data.WebClient.UnitTests.vbproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\ClientCSharpUnitTests\Microsoft.Data.WebClientCSharp.UnitTests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\Client.TDD.Tests\Microsoft.OData.Client.TDDUnitTests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataOData\Tests\OData.PluggableFormat.Tests\Microsoft.Test.OData.PluggableFormat.Tests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataOData\Tests\OData.Common.Tests\Microsoft.Test.Taupo.OData.Common.Tests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataOData\Tests\OData.Query.Tests\Microsoft.Test.Taupo.OData.Query.Tests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataOData\Tests\OData.Reader.Tests\Microsoft.Test.Taupo.OData.Reader.Tests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataOData\Tests\OData.Scenario.Tests\Microsoft.Test.Taupo.OData.Scenario.Tests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataOData\Tests\OData.Writer.Tests\Microsoft.Test.Taupo.OData.Writer.Tests.csproj
+     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataEdmLib\EdmLibTests.csproj            
   enabled: true
 
 - task: Powershell@2
@@ -331,66 +251,34 @@ steps:
     preferredAzurePowerShellVersion: 5.1.1
 
 - task: DotNetCoreCLI@2
-  displayName: 'Spatial Test with Release'
+  displayName: 'Spatial Test'
   inputs:
     command: 'test'
-    arguments: '--configuration Release --no-build --collect "Code coverage"'
+    arguments: '--configuration $(BuildConfiguration) --no-build --collect "Code coverage"'
     projects: |      
      $(Build.SourcesDirectory)\test\FunctionalTests\Microsoft.Spatial.Tests\Microsoft.Spatial.Tests.csproj
 
 - task: DotNetCoreCLI@2
-  displayName: 'Spatial Test with Debug'
+  displayName: 'EDM Test'
   inputs:
     command: 'test'
-    arguments: '--configuration Debug --no-build --collect "Code coverage"'
-    projects: |      
-     $(Build.SourcesDirectory)\test\FunctionalTests\Microsoft.Spatial.Tests\Microsoft.Spatial.Tests.csproj
-
-- task: DotNetCoreCLI@2
-  displayName: 'EDM Test with Release'
-  inputs:
-    command: 'test'
-    arguments: '--configuration Release --no-build --collect "Code coverage"'
+    arguments: '--configuration $(BuildConfiguration) --no-build --collect "Code coverage"'
     projects: |      
      $(Build.SourcesDirectory)\test\FunctionalTests\Microsoft.OData.Edm.Tests\Microsoft.OData.Edm.Tests.csproj
 
 - task: DotNetCoreCLI@2
-  displayName: 'EDM Test with Debug'
+  displayName: 'Core Test'
   inputs:
     command: 'test'
-    arguments: '--configuration Debug --no-build --collect "Code coverage"'
-    projects: |      
-     $(Build.SourcesDirectory)\test\FunctionalTests\Microsoft.OData.Edm.Tests\Microsoft.OData.Edm.Tests.csproj
-
-- task: DotNetCoreCLI@2
-  displayName: 'Core Test With Release'
-  inputs:
-    command: 'test'
-    arguments: '--configuration Release --no-build --collect "Code coverage"'
+    arguments: '--configuration $(BuildConfiguration) --no-build --collect "Code coverage"'
     projects: |      
      $(Build.SourcesDirectory)\test\FunctionalTests\Microsoft.OData.Core.Tests\Microsoft.OData.Core.Tests.csproj
 
 - task: DotNetCoreCLI@2
-  displayName: 'Core Test With Debug'
+  displayName: 'Client Test'
   inputs:
     command: 'test'
-    arguments: '--configuration Debug --no-build --collect "Code coverage"'
-    projects: |      
-     $(Build.SourcesDirectory)\test\FunctionalTests\Microsoft.OData.Core.Tests\Microsoft.OData.Core.Tests.csproj
-
-- task: DotNetCoreCLI@2
-  displayName: 'Client Test with Release'
-  inputs:
-    command: 'test'
-    arguments: '--configuration Release --no-build --collect "Code coverage"'
-    projects: |      
-     $(Build.SourcesDirectory)\test\FunctionalTests\Microsoft.OData.Client.Tests\Microsoft.OData.Client.Tests.csproj
-
-- task: DotNetCoreCLI@2
-  displayName: 'Client Test with Debug'
-  inputs:
-    command: 'test'
-    arguments: '--configuration Debug --no-build --collect "Code coverage"'
+    arguments: '--configuration $(BuildConfiguration) --no-build --collect "Code coverage"'
     projects: |      
      $(Build.SourcesDirectory)\test\FunctionalTests\Microsoft.OData.Client.Tests\Microsoft.OData.Client.Tests.csproj
 
@@ -413,10 +301,10 @@ steps:
 
 - task: DotNetCoreCLI@2
   timeoutInMinutes: 100
-  displayName: 'Test - Regression Test Suite --collect "Code coverage" with Release'
+  displayName: 'Test - Regression Test Suite --collect "Code coverage"'
   inputs:
     command: 'test'
-    arguments: '--configuration Release --no-build'
+    arguments: '--configuration $(BuildConfiguration) --no-build'
     projects: |           
      $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataEdmLib\EdmLibTests.csproj
      $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\MetadataObjectModelTests\Microsoft.Data.MetadataObjectModel.UnitTests.csproj
@@ -437,31 +325,6 @@ steps:
      $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\ddbasics\Microsoft.Test.Data.Services.DDBasics.csproj
      $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\TDDUnitTests\Microsoft.OData.Service.TDDUnitTests.csproj
      $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\TDDUnitTests\Microsoft.OData.Service.TDDUnitTests.csproj
-  enabled: true
-
-- task: DotNetCoreCLI@2
-  timeoutInMinutes: 100
-  displayName: 'Test - Regression Test Suite --collect "Code coverage" with Debug'
-  inputs:
-    command: 'test'
-    arguments: '--configuration Debug --no-build'
-    projects: |           
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataEdmLib\EdmLibTests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\MetadataObjectModelTests\Microsoft.Data.MetadataObjectModel.UnitTests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\NamedStreamTests\Microsoft.Data.NamedStream.UnitTests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\ServerUnitTests1\Microsoft.Data.ServerUnitTests1.UnitTests.csproj    
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\ServerUnitTests2\Microsoft.Data.ServerUnitTests2.UnitTests.csproj 
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\RegressionUnitTests\Microsoft.Data.Web.RegressionUnitTests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\ServerUnitTests\Microsoft.Data.Web.UnitTests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\ClientUnitTests\Microsoft.Data.WebClient.UnitTests.vbproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\ClientCSharpUnitTests\Microsoft.Data.WebClientCSharp.UnitTests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataServices\UnitTests\Client.TDD.Tests\Microsoft.OData.Client.TDDUnitTests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataOData\Tests\OData.PluggableFormat.Tests\Microsoft.Test.OData.PluggableFormat.Tests.csproj  
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataOData\Tests\OData.Common.Tests\Microsoft.Test.Taupo.OData.Common.Tests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataOData\Tests\OData.Query.Tests\Microsoft.Test.Taupo.OData.Query.Tests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataOData\Tests\OData.Reader.Tests\Microsoft.Test.Taupo.OData.Reader.Tests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataOData\Tests\OData.Scenario.Tests\Microsoft.Test.Taupo.OData.Scenario.Tests.csproj
-     $(Build.SourcesDirectory)\test\FunctionalTests\Tests\DataOData\Tests\OData.Writer.Tests\Microsoft.Test.Taupo.OData.Writer.Tests.csproj
   enabled: true
 
 - script: |
