--- a/azure-pipelines-nightly.yml
+++ b/azure-pipelines-nightly.yml
@@ -17,9 +17,14 @@ schedules:
 pool:
   vmImage: 'windows-2019'
 
+parameters:
+- name: buildConfigurationParameter
+  type: string
+  default: 'Release'
+
 variables:
   buildPlatform: 'Any CPU'
-  buildConfiguration: 'Release'
+  buildConfiguration: 'parameters.buildConfigurationParameter'
   skipComponentGovernanceDetection: true
   snExe: 'C:\Program Files (x86)\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.8 Tools\sn.exe'
   snExe64: 'C:\Program Files (x86)\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.8 Tools\x64\sn.exe'
