--- a/azure-pipelines-nightly.yml
+++ b/azure-pipelines-nightly.yml
@@ -24,7 +24,7 @@ parameters:
 
 variables:
   buildPlatform: 'Any CPU'
-  buildConfiguration: 'parameters.buildConfigurationParameter'
+  buildConfiguration: '${{ parameters.buildConfigurationParameter }}'
   skipComponentGovernanceDetection: true
   snExe: 'C:\Program Files (x86)\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.8 Tools\sn.exe'
   snExe64: 'C:\Program Files (x86)\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.8 Tools\x64\sn.exe'
